Add a tip how to run regrtests on macOS